@@ -1,0 +1,22 @@
+#role-theme-switcher-themes-form
+{
+	text-align: center;
+}
+
+
+#role-theme-switcher-themes-form label
+{
+	margin-bottom: 5px;
+}
+
+#role-theme-switcher-themes-form div.form-item
+{
+	display: inline;
+	margin-left: 15px;
+	float: left;
+}
+
+#role-theme-switcher-themes-form .form-submit
+{
+	margin-right: 350px;
+}
